<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/zero"
			android:textSize="32dp"
			android:textAlignment="textEnd"
			android:textColor="@color/white"
			android:layout_above="@+id/buttons_layout"
			android:id="@+id/solution_view"
			android:background="#4D000000"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/zero"
			android:textSize="64dp"
			android:textAlignment="textEnd"
			android:textColor="@color/white"
			android:layout_above="@+id/buttons_layout"
			android:layout_margin="16dp"
			android:id="@+id/result_view"/>


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_alignParentBottom="true"
			android:background="#B3000000"
			android:paddingVertical="16dp"
			android:id="@+id/buttons_layout">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_c"
					android:backgroundTint="#F44336"
					android:text="@string/c"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_open_bracket"
					android:backgroundTint="#9F9D9D"
					android:text="@string/openBracket"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_close_bracket"
					android:backgroundTint="#9F9D9D"
					android:text="@string/closeBracket"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_divide"
					android:text="@string/divide"
					android:backgroundTint="#FF8922"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_seven"
					android:text="@string/seven"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_eight"
					android:text="@string/eight"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_nine"
					android:text="@string/nine"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_multiply"
					android:text="@string/multiply"
					android:backgroundTint="#FF8922"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_four"
					android:text="@string/four"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_five"
					android:text="@string/five"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_six"
					android:text="@string/six"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_add"
					android:text="@string/plus"
					android:backgroundTint="#FF8922"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_one"
					android:text="@string/one"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_two"
					android:text="@string/two"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_three"
					android:text="@string/three"/>

			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_subtract"
					android:text="@string/minus"
					android:backgroundTint="#FF8922"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center">
			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="18sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_ac"
					android:backgroundTint="#F44336"
					android:text="@string/ac"/>
			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_zero"
					android:text="@string/zero"/>
			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_dot"
					android:text="@string/dot"/>
			<com.google.android.material.button.MaterialButton
					android:layout_width="72dp"
					android:layout_height="72dp"
					app:cornerRadius="36dp"
					style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
					android:textSize="32sp"
					android:layout_margin="12dp"
					android:textColor="@color/white"
					android:id="@+id/button_equals"
					android:text="@string/equals"
					android:backgroundTint="#FF8922"/>
		</LinearLayout>

	</LinearLayout>
</RelativeLayout>